# verifiable-inference

./: Cargo.toml  README.md  benchmark.txt  graph.py  normal_method.txt  pi_net.json  verifiable_method.txt
benches/: normal_method.rs  verifiable_method.rs
src/: bin_loader.rs  circuit.rs  compiler.rs  jq.rs  lib.rs  main.rs  model.rs  protocol.rs  r1cs.rs  scalar.rs
