[package]
name = "verifiable-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["rand_core"] }
merlin = "3.0.0"
rand = "0.8.5"
spartan = { version = "0.8.0", default-features = false, features = ["std"] }
mnist = "0.6.0"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0"
rayon = "1.10"
bincode = "1.3.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "veinf"
path = "src/main.rs"

[[bench]]
name = "verifiable_method"
harness = false

[[bench]]
name = "normal_method"
harness = false
